# housing

./: Cargo.toml  devenv.nix  justfile  notes.txt
src/: census.rs  data.rs  geo_helpers.rs  geopackage.rs  lib.rs  main.rs  msoa.rs
