[package]
name = "density"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
geo = "0.28.0"
geo-types = "0.7.13"
geojson = "0.24.1"
geozero = { version = "0.12.0", features = ["with-wkb", "with-gpkg"] }
proj = { version = "0.23.0", features = [] }
serde = { version = "1.0.199", features = ["serde_derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.37.0", features = ["rt", "macros", "rt-multi-thread"] }
